# db-to-pd

./: .gitignore  LICENSE  README.md  pyproject.toml
src/db_to_pd/: __init__.py  config.py  database.py  tables.py
